@@ -1,3 +1,7 @@
+Wed Mar 16 12:08:36 UTC 2011  Steve Huston  <shuston@riverace.com>
+
+        * ace/config-aix-7.h: New config for AIX 7.
+
 Thu Mar 10 16:42:09 UTC 2011  Steve Huston  <shuston@riverace.com>
 
         * ace/ace.mpc: Add OS.h to the Headers to be installed. Thanks to
